Handle fractions more accurately.

--- a/tex/p011.tex
+++ b/tex/p011.tex
@@ -9,7 +9,7 @@
 \vs p011 1:4 The Father is always to be found at this central location. Did he move, universal pandemonium would be precipitated, for there converge in him at this residential centre the universal lines of gravity from the ends of creation. Whether we trace the personality circuit back through the universes or follow the ascending personalities as they journey inward to the Father; whether we trace the lines of material gravity to nether Paradise or follow the insurging cycles of cosmic force; whether we trace the lines of spiritual gravity to the Eternal Son or follow the inward processional of the Paradise Sons of God; whether we trace out the mind circuits or follow the trillions upon trillions of celestial beings who spring from the Infinite Spirit --- by any of these observations or by all of them we are led directly back to the Father’s presence, to his central abode. Here is God personally, literally, and actually present. And from his infinite being there flow the flood\hyp{}streams of life, energy, and personality to all universes.
 \usection{2.\bibnobreakspace Nature of the Eternal Isle}
 \vs p011 2:1 Since you are beginning to glimpse the enormousness of the material universe discernible even from your astronomical location, your space position in the starry systems, it should become evident to you that such a tremendous material universe must have an adequate and worthy capital, a headquarters commensurate with the dignity and infinitude of the universal Ruler of all this vast and far\hyp{}flung creation of material realms and living beings.
-\vs p011 2:2 \pc In form Paradise differs from the inhabited space bodies: it is not spherical. It is definitely ellipsoid, being \bibfrac{1}{6} longer in the north\hyp{}south diameter than in the east\hyp{}west diameter. The central Isle is essentially flat, and the distance from the upper surface to the nether surface is \bibfrac{1}{10} that of the east\hyp{}west diameter.
+\vs p011 2:2 \pc In form Paradise differs from the inhabited space bodies: it is not spherical. It is definitely ellipsoid, being \bibfrac{1}{6}\ts{th} longer in the north\hyp{}south diameter than in the east\hyp{}west diameter. The central Isle is essentially flat, and the distance from the upper surface to the nether surface is \bibfrac{1}{10}\ts{th} that of the east\hyp{}west diameter.
 \vs p011 2:3 These differences in dimensions, taken in connection with its stationary status and the greater out\hyp{}pressure of force\hyp{}energy at the north end of the Isle, make it possible to establish absolute direction in the master universe.
 \vs p011 2:4 \pc The central Isle is geographically divided into three domains of activity:
 \vs p011 2:5 \ublistelem{1.}\bibnobreakspace Upper Paradise.
