--- a/tex/p015.tex
+++ b/tex/p015.tex
@@ -37,7 +37,7 @@
 \vs p015 2:24 One superuniverse (10 major sectors) $10^{12}$ worlds
 \vs p015 2:25 \pc All such estimates are approximations at best, for new systems are constantly evolving while other organizations are temporarily passing out of material existence.
 \usection{3.\bibnobreakspace The Superuniverse of Orvonton}
-\vs p015 3:1 Practically all of the starry realms visible to the naked eye on Urantia belong to the seventh section of the grand universe, the superuniverse of Orvonton. The vast Milky Way starry system represents the central nucleus of Orvonton, being largely beyond the borders of your local universe. This great aggregation of suns, dark islands of space, double stars, globular clusters, star clouds, spiral and other nebulae, together with myriads of individual planets, forms a watchlike, elongated\hyp{}circular grouping of about \bibfrac{1}{7} of the inhabited evolutionary universes.
+\vs p015 3:1 Practically all of the starry realms visible to the naked eye on Urantia belong to the seventh section of the grand universe, the superuniverse of Orvonton. The vast Milky Way starry system represents the central nucleus of Orvonton, being largely beyond the borders of your local universe. This great aggregation of suns, dark islands of space, double stars, globular clusters, star clouds, spiral and other nebulae, together with myriads of individual planets, forms a watchlike, elongated\hyp{}circular grouping of about \bibfrac{1}{7}\ts{th} of the inhabited evolutionary universes.
 \vs p015 3:2 From the astronomical position of Urantia, as you look through the cross section of near\hyp{}by systems to the great Milky Way, you observe that the spheres of Orvonton are travelling in a vast elongated plane, the breadth being far greater than the thickness and the length far greater than the breadth.
 \vs p015 3:3 Observation of the so\hyp{}called Milky Way discloses the comparative increase in Orvonton stellar density when the heavens are viewed in one direction, while on either side the density diminishes; the number of stars and other spheres decreases away from the chief plane of our material superuniverse. When the angle of observation is propitious, gazing through the main body of this realm of maximum density, you are looking toward the residential universe and the centre of all things.
 \vs p015 3:4 \pc Of the ten major divisions of Orvonton, eight have been roughly identified by Urantian astronomers. The other two are difficult of separate recognition because you are obliged to view these phenomena from the inside. If you could look upon the superuniverse of Orvonton from a position far\hyp{}distant in space, you would immediately recognize the ten major sectors of the seventh galaxy.
@@ -172,7 +172,7 @@
 \vs p015 12:3 In all matters not requiring trial, the submission of evidence, the Ancients of Days or their associates render decisions, and these rulings are always unanimous. We are here dealing with the councils of perfection. There are no disagreements nor minority opinions in the decrees of these supreme and superlative tribunals.
 \vs p015 12:4 With certain few exceptions the supergovernments exercise jurisdiction over all things and all beings in their respective domains. There is no appeal from the rulings and decisions of the superuniverse authorities since they represent the concurred opinions of the Ancients of Days and that Master Spirit who, from Paradise, presides over the destiny of the superuniverse concerned.
 \usection{13.\bibnobreakspace The Sector Governments}
-\vs p015 13:1 A \bibemph{major sector} comprises about \bibfrac{1}{10} of a superuniverse and consists of 100 minor sectors, $10^4$ local universes, about $10^{11}$ inhabitable worlds. These major sectors are administered by three Perfections of Days, Supreme Trinity Personalities.
+\vs p015 13:1 A \bibemph{major sector} comprises about \bibfrac{1}{10}\ts{th} of a superuniverse and consists of 100 minor sectors, $10^4$ local universes, about $10^{11}$ inhabitable worlds. These major sectors are administered by three Perfections of Days, Supreme Trinity Personalities.
 \vs p015 13:2 The courts of the Perfections of Days are constituted much as are those of the Ancients of Days except that they do not sit in spiritual judgment upon the realms. The work of these major sector governments has chiefly to do with the intellectual status of a far\hyp{}flung creation. The major sectors detain, adjudicate, dispense, and tabulate, for reporting to the courts of the Ancients of Days, all matters of superuniverse importance of a routine and administrative nature which are not immediately concerned with the spiritual administration of the realms or with the outworking of the mortal\hyp{}ascension plans of the Paradise Rulers. The personnel of a major sector government is no different from that of the superuniverse.
 \vs p015 13:3 As the magnificent satellites of Uversa are concerned with your final spiritual preparation for Havona, so are the 70 satellites of Umajor the fifth devoted to your superuniverse intellectual training and development. From all Orvonton, here are gathered together the wise beings who labour untiringly to prepare the mortals of time for their further progress towards the career of eternity. Most of this training of ascending mortals is conducted on the 70 study worlds.
 \vs p015 13:4 \pc The \bibemph{minor sector} governments are presided over by three Recents of Days. Their administration is concerned mainly with the physical control, unification, stabilization, and routine co\hyp{}ordination of the administration of the component local universes. Each minor sector embraces as many as 100 local universes, $10^4$ constellations, $10^6$ systems, or about $10^9$ inhabitable worlds.
