--- a/tex/p023.tex
+++ b/tex/p023.tex
@@ -1,7 +1,7 @@
 \upaper{23}{The Solitary Messengers}
 \author{Divine Counsellor}
 \vs p023 0:1 Solitary Messengers are the personal and universal corps of the Conjoint Creator; they are the first and senior order of the Higher Personalities of the Infinite Spirit. They represent the initial creative action of the Infinite Spirit in solitary function for the purpose of bringing into existence solitary personality spirits. Neither the Father nor the Son directly participated in this stupendous spiritualization.
-\vs p023 0:2 These spirit messengers were personalized in a single creative episode, and their number is stationary. Although I have one of these extraordinary beings associated with me on this present mission, I do not know how many such personalities exist in the universe of universes. I only know, from time to time, how many are of registry\hyp{}record as functioning for the time being within the jurisdiction of our superuniverse. From the last Uversa report I observe that there were almost 7,690 trillion Solitary Messengers then operating within the boundaries of Orvonton; and I conjecture that this is considerably less than \bibfrac{1}{7} of their total number.
+\vs p023 0:2 These spirit messengers were personalized in a single creative episode, and their number is stationary. Although I have one of these extraordinary beings associated with me on this present mission, I do not know how many such personalities exist in the universe of universes. I only know, from time to time, how many are of registry\hyp{}record as functioning for the time being within the jurisdiction of our superuniverse. From the last Uversa report I observe that there were almost 7,690 trillion Solitary Messengers then operating within the boundaries of Orvonton; and I conjecture that this is considerably less than \bibfrac{1}{7}\ts{th} of their total number.
 \usection{1.\bibnobreakspace Nature and Origin of Solitary Messengers}
 \vs p023 1:1 Immediately following the creation of the Seven Spirits of the Havona Circuits the Infinite Spirit brought into being the vast corps of Solitary Messengers. There is no part of the universal creation which is pre\hyp{}existent to the Solitary Messengers except Paradise and the Havona circuits; they have functioned throughout the grand universe from near eternity. They are fundamental to the divine technique of the Infinite Spirit for self\hyp{}revelation to, and personal contact with, the far\hyp{}flung creations of time and space.
 \vs p023 1:2 Notwithstanding that these messengers are existent from the near times of eternity, they are all aware of a beginning of selfhood. They are conscious of time, being the first of the creation of the Infinite Spirit to possess such a time consciousness. They are the first\hyp{}born creatures of the Infinite Spirit to be personalized in time and spiritualized in space.
