--- a/tex/p025.tex
+++ b/tex/p025.tex
@@ -20,7 +20,7 @@
 \usection{2.\bibnobreakspace The Universal Conciliators}
 \vs p025 2:1 For every Havona Servital created, seven Universal Conciliators are brought into being, one in each superuniverse. This creative enactment involves a definite superuniverse technique of reflective response to transactions taking place on Paradise.
 \vs p025 2:2 On the headquarters worlds of the seven superuniverses there function the seven reflections of the Seven Master Spirits. It is difficult to undertake to portray the natures of these Reflective Spirits to material minds. They are true personalities; still each member of a superuniverse group is perfectly reflective of just one of the Seven Master Spirits. And every time the Master Spirits associate themselves with the power directors for the purpose of creating a group of Havona Servitals, there is a simultaneous focalization upon one of the Reflective Spirits in each of the superuniverse groups, and forthwith and full\hyp{}fledgedly an equal number of Universal Conciliators appear on the headquarters worlds of the supercreations. If, in the creation of servitals, Master Spirit Number Seven should take the initiative, none but the Reflective Spirits of the seventh order would become pregnant with conciliators; and concurrently with the creation of 1,000 Orvontonlike servitals, 1,000 of the 7\ts{th}\hyp{}order conciliators would appear on each superuniverse capital. Out of these episodes, reflecting the sevenfold nature of the Master Spirits, arise the 7 created orders of conciliators serving in each superuniverse.
-\vs p025 2:3 Conciliators of pre\hyp{}Paradise status do not serve interchangeably between superuniverses, being restricted to their native segments of creation. Every superuniverse corps, embracing \bibfrac{1}{7} of each created order, therefore spends a very long time under the influence of one of the Master Spirits to the exclusion of the others, for, while all seven are \bibemph{reflected} on the superuniverse capitals, only one is \bibemph{dominant} in each supercreation.
+\vs p025 2:3 Conciliators of pre\hyp{}Paradise status do not serve interchangeably between superuniverses, being restricted to their native segments of creation. Every superuniverse corps, embracing \bibfrac{1}{7}\ts{th} of each created order, therefore spends a very long time under the influence of one of the Master Spirits to the exclusion of the others, for, while all seven are \bibemph{reflected} on the superuniverse capitals, only one is \bibemph{dominant} in each supercreation.
 \vs p025 2:4 Each of the seven supercreations is actually pervaded by that one of the Master Spirits who presides over its destinies. Each superuniverse thus becomes like a gigantic mirror reflecting the nature and character of the supervising Master Spirit, and all of this is further continued in every subsidiary local universe by the presence and function of the Creative Mother Spirits. The effect of such an environment upon evolutionary growth is so profound that in their postsuperuniverse careers the conciliators collectively manifest 49 experiential viewpoints, or insights, each angular --- hence incomplete --- but all mutually compensatory and together tending to encompass the circle of Supremacy.
 \vs p025 2:5 \pc In each superuniverse the Universal Conciliators find themselves strangely and innately segregated into groups of four, associations in which they continue to serve. In each group, three are spirit personalities, and one, like the fourth creatures of the servitals, is a semimaterial being. This quartet constitutes a conciliating commission and is made up as follows:
 \vs p025 2:6 \ublistelem{1.}\bibnobreakspace \bibemph{The Judge\hyp{}Arbiter.} The one unanimously designated by the other three as the most competent and best qualified to act as judicial head of the group.
