--- a/tex/p055.tex
+++ b/tex/p055.tex
@@ -21,7 +21,7 @@
 \vs p055 1:6 \pc On presettled worlds, planets without morontia temples, these fusion flashes many times occur in the planetary atmosphere, where the material body of a translation candidate is elevated by the midway creatures and the physical controllers.
 \usection{2.\bibnobreakspace Death and Translation}
 \vs p055 2:1 Natural, physical death is not a mortal inevitability. The majority of advanced evolutionary beings, citizens on worlds existing in the final era of light and life, do not die; they are translated directly from the life in the flesh to the morontia existence.
-\vs p055 2:2 This experience of translation from the material life to the morontia state --- fusion of the immortal soul with the indwelling Adjuster --- increases in frequency commensurate with the evolutionary progress of the planet. At first only a few mortals in each age attain translation levels of spiritual progress, but with the onset of the successive ages of the Teacher Sons, more and more Adjuster fusions occur before the termination of the lengthening lives of these progressing mortals; and by the time of the terminal mission of the Teacher Sons, approximately \bibfrac{1}{4} of these superb mortals are exempt from natural death.
+\vs p055 2:2 This experience of translation from the material life to the morontia state --- fusion of the immortal soul with the indwelling Adjuster --- increases in frequency commensurate with the evolutionary progress of the planet. At first only a few mortals in each age attain translation levels of spiritual progress, but with the onset of the successive ages of the Teacher Sons, more and more Adjuster fusions occur before the termination of the lengthening lives of these progressing mortals; and by the time of the terminal mission of the Teacher Sons, approximately \bibfrac{1}{4}\ts{er} of these superb mortals are exempt from natural death.
 \vs p055 2:3 \pc Farther along in the era of light and life the midway creatures or their associates sense the approaching status of probable soul\hyp{}Adjuster union and signify this to the destiny guardians, who in turn communicate these matters to the finaliter group under whose jurisdiction this mortal may be functioning; then there is issued the summons of the Planetary Sovereign for such a mortal to resign all planetary duties, bid farewell to the world of his origin, and repair to the inner temple of the Planetary Sovereign, there to await morontia transit, the translation flash, from the material domain of evolution to the morontia level of prespirit progression.
 \vs p055 2:4 \pc When the family, friends, and working group of such a fusion candidate have forgathered in the morontia temple, they are distributed around the central stage whereon the fusion candidates are resting, meantime freely conversing with their assembled friends. A circle of intervening celestial personalities is arranged to protect the material mortals from the action of the energies manifest at the instant of the “life flash” which delivers the ascension candidate from the bonds of material flesh, thereby doing for such an evolutionary mortal everything that natural death does for those who are thereby delivered from the flesh.
 \vs p055 2:5 Many fusion candidates may be assembled in the spacious temple at the same time. And what a beautiful occasion when mortals thus forgather to witness the ascension of their loved ones in spiritual flames, and what a contrast to those earlier ages when mortals must commit their dead to the embrace of the terrestrial elements! The scenes of weeping and wailing characteristic of earlier epochs of human evolution are now replaced by ecstatic joy and the sublimest enthusiasm as these God\hyp{}knowing mortals bid their loved ones a transient farewell as they are removed from their material associations by the spiritual fires of consuming grandeur and ascending glory. On worlds settled in light and life, “funerals” are occasions of supreme joy, profound satisfaction, and inexpressible hope.
