--- a/tex/p057.tex
+++ b/tex/p057.tex
@@ -63,13 +63,13 @@
 \vs p057 6:7 \pc \bibemph{3,500,000,000} years ago the condensation nucleuses of the other 10 planets were well formed, and the cores of most of the moons were intact, though some of the smaller satellites later united to make the present\hyp{}day larger moons. This age may be regarded as the era of planetary assembly.
 \vs p057 6:8 \pc \bibemph{3,000,000,000} years ago the solar system was functioning much as it does today. Its members continued to grow in size as space meteors continued to pour in upon the planets and their satellites at a prodigious rate.
 \vs p057 6:9 About this time your solar system was placed on the physical registry of Nebadon and given its name, Monmatia.
-\vs p057 6:10 \pc \bibemph{2,500,000,000} years ago the planets had grown immensely in size. Urantia was a well\hyp{}developed sphere about \bibfrac{1}{10} its present mass and was still growing rapidly by meteoric accretion.
+\vs p057 6:10 \pc \bibemph{2,500,000,000} years ago the planets had grown immensely in size. Urantia was a well\hyp{}developed sphere about \bibfrac{1}{10}\ts{th} its present mass and was still growing rapidly by meteoric accretion.
 \vs p057 6:11 All of this tremendous activity is a normal part of the making of an evolutionary world on the order of Urantia and constitutes the astronomic preliminaries to the setting of the stage for the beginning of the physical evolution of such worlds of space in preparation for the life adventures of time.
 \usection{7.\bibnobreakspace The Meteoric Era --- The Volcanic Age\\The Primitive Planetary Atmosphere}
 \vs p057 7:1 Throughout these early times the space regions of the solar system were swarming with small disruptive and condensation bodies, and in the absence of a protective combustion atmosphere such space bodies crashed directly on the surface of Urantia. These incessant impacts kept the surface of the planet more or less heated, and this, together with the increased action of gravity as the sphere grew larger, began to set in operation those influences which gradually caused the heavier elements, such as iron, to settle more and more toward the centre of the planet.
-\vs p057 7:2 \pc \bibemph{2,000,000,000} years ago the earth began decidedly to gain on the moon. Always had the planet been larger than its satellite, but there was not so much difference in size until about this time, when enormous space bodies were captured by the earth. Urantia was then about \bibfrac{1}{5} its present size and had become large enough to hold the primitive atmosphere which had begun to appear as a result of the internal elemental contest between the heated interior and the cooling crust.
+\vs p057 7:2 \pc \bibemph{2,000,000,000} years ago the earth began decidedly to gain on the moon. Always had the planet been larger than its satellite, but there was not so much difference in size until about this time, when enormous space bodies were captured by the earth. Urantia was then about \bibfrac{1}{5}\ts{th} its present size and had become large enough to hold the primitive atmosphere which had begun to appear as a result of the internal elemental contest between the heated interior and the cooling crust.
 \vs p057 7:3 Definite volcanic action dates from these times. The internal heat of the earth continued to be augmented by the deeper and deeper burial of the radioactive or heavier elements brought in from space by the meteors. The study of these radioactive elements will reveal that Urantia is more than 1,000,000,000 years old on its surface. The radium clock is your most reliable timepiece for making scientific estimates of the age of the planet, but all such estimates are too short because the radioactive materials open to your scrutiny are all derived from the earth’s surface and hence represent Urantia’s comparatively recent acquirements of these elements.
-\vs p057 7:4 \pc \bibemph{1,500,000,000} years ago the earth was \bibfrac{2}{3} its present size, while the moon was nearing its present mass. Earth’s rapid gain over the moon in size enabled it to begin the slow robbery of the little atmosphere which its satellite originally had.
+\vs p057 7:4 \pc \bibemph{1,500,000,000} years ago the earth was \bibfrac{2}{3}\ts{rds} its present size, while the moon was nearing its present mass. Earth’s rapid gain over the moon in size enabled it to begin the slow robbery of the little atmosphere which its satellite originally had.
 \vs p057 7:5 Volcanic action is now at its height. The whole earth is a veritable fiery inferno, the surface resembling its earlier molten state before the heavier metals gravitated toward the centre. \bibemph{This is the volcanic age.} Nevertheless, a crust, consisting chiefly of the comparatively lighter granite, is gradually forming. The stage is being set for a planet which can someday support life.
 \vs p057 7:6 \pc The primitive planetary atmosphere is slowly evolving, now containing some water vapour, carbon monoxide, carbon dioxide, and hydrogen chloride, but there is little or no free nitrogen or free oxygen. The atmosphere of a world in the volcanic age presents a queer spectacle. In addition to the gases enumerated it is heavily charged with numerous volcanic gases and, as the air belt matures, with the combustion products of the heavy meteoric showers which are constantly hurtling in upon the planetary surface. Such meteoric combustion keeps the atmospheric oxygen very nearly exhausted, and the rate of meteoric bombardment is still tremendous.
 \vs p057 7:7 \pc Presently, the atmosphere became more settled and cooled sufficiently to start precipitation of rain on the hot rocky surface of the planet. For thousands of years Urantia was enveloped in one vast and continuous blanket of steam. And during these ages the sun never shone upon the earth’s surface.
@@ -96,8 +96,8 @@
 \vs p057 8:17 Volcanic eruptions and earthquakes continued to diminish in frequency and severity. The atmosphere was clearing of volcanic gases and water vapour, but the percentage of carbon dioxide was still high.
 \vs p057 8:18 Electric disturbances in the air and in the earth were also decreasing. The lava flows had brought to the surface a mixture of elements which diversified the crust and better insulated the planet from certain space\hyp{}energies. And all of this did much to facilitate the control of terrestrial energy and to regulate its flow, as is disclosed by the functioning of the magnetic poles.
 \vs p057 8:19 \pc \bibemph{800,000,000} years ago witnessed the inauguration of the first great land epoch, the age of increased continental emergence.
-\vs p057 8:20 Since the condensation of the earth’s hydrosphere, first into the world ocean and subsequently into the Pacific Ocean, this latter body of water should be visualized as then covering \bibfrac{9}{10} of the earth’s surface. Meteors falling into the sea accumulated on the ocean bottom, and meteors are, generally speaking, composed of heavy materials. Those falling on the land were largely oxidized, subsequently worn down by erosion, and washed into the ocean basins. Thus the ocean bottom grew increasingly heavy, and added to this was the weight of a body of water at some places 16\,km deep.
-\vs p057 8:21 The increasing downthrust of the Pacific Ocean operated further to upthrust the continental land mass. Europe and Africa began to rise out of the Pacific depths along with those masses now called Australia, North and South America, and the continent of Antarctica, while the bed of the Pacific Ocean engaged in a further compensatory sinking adjustment. By the end of this period almost \bibfrac{1}{3} of the earth’s surface consisted of land, all in one continental body.
+\vs p057 8:20 Since the condensation of the earth’s hydrosphere, first into the world ocean and subsequently into the Pacific Ocean, this latter body of water should be visualized as then covering \bibfrac{9}{10}\ts{ths} of the earth’s surface. Meteors falling into the sea accumulated on the ocean bottom, and meteors are, generally speaking, composed of heavy materials. Those falling on the land were largely oxidized, subsequently worn down by erosion, and washed into the ocean basins. Thus the ocean bottom grew increasingly heavy, and added to this was the weight of a body of water at some places 16\,km deep.
+\vs p057 8:21 The increasing downthrust of the Pacific Ocean operated further to upthrust the continental land mass. Europe and Africa began to rise out of the Pacific depths along with those masses now called Australia, North and South America, and the continent of Antarctica, while the bed of the Pacific Ocean engaged in a further compensatory sinking adjustment. By the end of this period almost \bibfrac{1}{3}\ts{rd} of the earth’s surface consisted of land, all in one continental body.
 \vs p057 8:22 With this increase in land elevation the first climatic differences of the planet appeared. Land elevation, cosmic clouds, and oceanic influences are the chief factors in climatic fluctuation. The backbone of the Asiatic land mass reached a height of almost 14\,km at the time of the maximum land emergence. Had there been much moisture in the air hovering over these highly elevated regions, enormous ice blankets would have formed; the ice age would have arrived long before it did. It was several hundred millions of years before so much land again appeared above water.
 \vs p057 8:23 \pc \bibemph{750,000,000} years ago the first breaks in the continental land mass began as the great north\hyp{}and\hyp{}south cracking, which later admitted the ocean waters and prepared the way for the westward drift of the continents of North and South America, including Greenland. The long east\hyp{}and\hyp{}west cleavage separated Africa from Europe and severed the land masses of Australia, the Pacific Islands, and Antarctica from the Asiatic continent.
 \vs p057 8:24 \pc \bibemph{700,000,000} years ago Urantia was approaching the ripening of conditions suitable for the support of life. The continental land drift continued; increasingly the ocean penetrated the land as long fingerlike seas providing those shallow waters and sheltered bays which are so suitable as a habitat for marine life.
