--- a/tex/p058.tex
+++ b/tex/p058.tex
@@ -53,7 +53,7 @@
 \usection{7.\bibnobreakspace The Geologic History Book}
 \vs p058 7:1 The vast group of rock systems which constituted the outer crust of the world during the life\hyp{}dawn or Proterozoic era does not now appear at many points on the earth’s surface. And when it does emerge from below all the accumulations of subsequent ages, there will be found only the fossil remains of vegetable and early primitive animal life. Some of these older water\hyp{}deposited rocks are commingled with subsequent layers, and sometimes they yield fossil remains of some of the earlier forms of vegetable life, while on the topmost layers occasionally may be found some of the more primitive forms of the early marine\hyp{}animal organisms. In many places these oldest stratified rock layers, bearing the fossils of the early marine life, both animal and vegetable, may be found directly on top of the older undifferentiated stone.
 \vs p058 7:2 Fossils of this era yield algae, corallike plants, primitive Protozoa, and spongelike transition organisms. But the absence of such fossils in the early rock layers does not necessarily prove that living things were not elsewhere in existence at the time of their deposition. Life was sparse throughout these early times and only slowly made its way over the face of the earth.
-\vs p058 7:3 \pc The rocks of this olden age are now at the earth’s surface, or very near the surface, over about \bibfrac{1}{8} of the present land area. The average thickness of this transition stone, the oldest stratified rock layers, is about 2.4\,km. At some points these ancient rock systems are as much as 6.4\,km thick, but many of the layers which have been ascribed to this era belong to later periods.
+\vs p058 7:3 \pc The rocks of this olden age are now at the earth’s surface, or very near the surface, over about \bibfrac{1}{8}\ts{th} of the present land area. The average thickness of this transition stone, the oldest stratified rock layers, is about 2.4\,km. At some points these ancient rock systems are as much as 6.4\,km thick, but many of the layers which have been ascribed to this era belong to later periods.
 \vs p058 7:4 In North America this ancient and primitive fossil\hyp{}bearing stone layer comes to the surface over the eastern, central, and northern regions of Canada. There is also an intermittent east\hyp{}west ridge of this rock which extends from Pennsylvania and the ancient Adirondack Mountains on west through Michigan, Wisconsin, and Minnesota. Other ridges run from Newfoundland to Alabama and from Alaska to Mexico.
 \vs p058 7:5 The rocks of this era are exposed here and there all over the world, but none are so easy of interpretation as those about Lake Superior and in the Grand Canyon of the Colorado River, where these primitive fossil\hyp{}bearing rocks, existing in several layers, testify to the upheavals and surface fluctuations of those faraway times.
 \vs p058 7:6 This stone layer, the oldest fossil\hyp{}bearing stratum in the crust of the earth, has been crumpled, folded, and grotesquely twisted as a result of the upheavals of earthquakes and the early volcanoes. The lava flows of this age brought much iron, copper, and lead up near the planetary surface.
