--- a/tex/p059.tex
+++ b/tex/p059.tex
@@ -6,7 +6,7 @@
 \vs p059 0:4 \ublistelem{3.}\bibnobreakspace \bibemph{The marine\hyp{}life era} covers the next 250,000,000 years and is best known to you as the \bibemph{Paleozoic.}
 \vs p059 0:5 \ublistelem{4.}\bibnobreakspace \bibemph{The early land\hyp{}life era} extends over the next 100,000,000 years and is known as the \bibemph{Mesozoic.}
 \vs p059 0:6 \ublistelem{5.}\bibnobreakspace \bibemph{The mammalian era} occupies the last 50,000,000 years. This recent\hyp{}times era is known as the \bibemph{Cenozoic.}
-\vs p059 0:7 \pc The marine\hyp{}life era thus covers about \bibfrac{1}{4} of your planetary history. It may be subdivided into 6 long periods, each characterized by certain well\hyp{}defined developments in both the geologic realms and the biologic domains.
+\vs p059 0:7 \pc The marine\hyp{}life era thus covers about \bibfrac{1}{4}\ts{er} of your planetary history. It may be subdivided into 6 long periods, each characterized by certain well\hyp{}defined developments in both the geologic realms and the biologic domains.
 \vs p059 0:8 As this era begins, the sea bottoms, the extensive continental shelves, and the numerous shallow near\hyp{}shore basins are covered with prolific vegetation. The more simple and primitive forms of animal life have already developed from preceding vegetable organisms, and the early animal organisms have gradually made their way along the extensive coast lines of the various land masses until the many inland seas are teeming with primitive marine life. Since so few of these early organisms had shells, not many have been preserved as fossils. Nevertheless the stage is set for the opening chapters of that great “stone book” of the life\hyp{}record preservation which was so methodically laid down during the succeeding ages.
 \vs p059 0:9 The continent of North America is wonderfully rich in the fossil\hyp{}bearing deposits of the entire marine\hyp{}life era. The very first and oldest layers are separated from the later strata of the preceding period by extensive erosion deposits which clearly segregate these two stages of planetary development.
 \usection{1.\bibnobreakspace Early Marine Life in the Shallow Seas\\The Trilobite Age}
@@ -111,7 +111,7 @@
 \vs p059 6:8 \pc Among the land animals the frogs reached their climax in the preceding age and rapidly declined, but they survived because they could long live even in the drying\hyp{}up pools and ponds of these far\hyp{}distant and extremely trying times. During this declining frog age, in Africa, the first step in the evolution of the frog into the reptile occurred. And since the land masses were still connected, this prereptilian creature, an air breather, spread over all the world. By this time the atmosphere had been so changed that it served admirably to support animal respiration. It was soon after the arrival of these prereptilian frogs that North America was temporarily isolated, cut off from Europe, Asia, and South America.
 \vs p059 6:9 The gradual cooling of the ocean waters contributed much to the destruction of oceanic life. The marine animals of those ages took temporary refuge in three favourable retreats: the present Gulf of Mexico region, the Ganges Bay of India, and the Sicilian Bay of the Mediterranean basin. And it was from these three regions that the new marine species, born to adversity, later went forth to replenish the seas.
 \vs p059 6:10 \pc \bibemph{160,000,000} years ago the land was largely covered with vegetation adapted to support land\hyp{}animal life, and the atmosphere had become ideal for animal respiration. Thus ends the period of marine\hyp{}life curtailment and those testing times of biologic adversity which eliminated all forms of life except such as had survival value, and which were therefore entitled to function as the ancestors of the more rapidly developing and highly differentiated life of the ensuing ages of planetary evolution.
-\vs p059 6:11 The ending of this period of biologic tribulation, known to your students as the \bibemph{Permian,} also marks the end of the long \bibemph{Paleozoic} era, which covers \bibfrac{1}{4} of the planetary history, 250,000,000 years.
+\vs p059 6:11 The ending of this period of biologic tribulation, known to your students as the \bibemph{Permian,} also marks the end of the long \bibemph{Paleozoic} era, which covers \bibfrac{1}{4}\ts{er} of the planetary history, 250,000,000 years.
 \vs p059 6:12 The vast oceanic nursery of life on Urantia has served its purpose. During the long ages when the land was unsuited to support life, before the atmosphere contained sufficient oxygen to sustain the higher land animals, the sea mothered and nurtured the early life of the realm. Now the biologic importance of the sea progressively diminishes as the second stage of evolution begins to unfold on the land.
 \vsetoff
 \vs p059 6:13 [Presented by a Life Carrier of Nebadon, one of the original corps assigned to Urantia.]
