--- a/tex/p073.tex
+++ b/tex/p073.tex
@@ -32,7 +32,7 @@
 \vs p073 4:5 But it was a cause for great disappointment when Van, not knowing how soon the expected Son and Daughter might come, suggested that the younger generation also be trained in the work of carrying on the enterprise in case their arrival should be delayed. This seemed like an admission of lack of faith on Van’s part and made considerable trouble, caused many desertions; but Van went forward with his plan of preparedness, meantime filling the places of the deserters with younger volunteers.
 \usection{5.\bibnobreakspace The Garden Home}
 \vs p073 5:1 At the centre of the Edenic peninsula was the exquisite stone temple of the Universal Father, the sacred shrine of the Garden. To the north the administrative headquarters was established; to the south were built the homes for the workers and their families; to the west was provided the allotment of ground for the proposed schools of the educational system of the expected Son, while in the “east of Eden” were built the domiciles intended for the promised Son and his immediate offspring. The architectural plans for Eden provided homes and abundant land for 1,000,000 human beings.
-\vs p073 5:2 At the time of Adam’s arrival, though the Garden was only \bibfrac{1}{4} finished, it had thousands of kilometres of irrigation ditches and more than 19,300\,km of paved paths and roads. There were a trifle over 5,000 brick buildings in the various sectors, and the trees and plants were almost beyond number. Seven was the largest number of houses composing any one cluster in the park. And though the structures of the Garden were simple, they were most artistic. The roads and paths were well built, and the landscaping was exquisite.
+\vs p073 5:2 At the time of Adam’s arrival, though the Garden was only \bibfrac{1}{4}\ts{th} finished, it had thousands of kilometres of irrigation ditches and more than 19,300\,km of paved paths and roads. There were a trifle over 5,000 brick buildings in the various sectors, and the trees and plants were almost beyond number. Seven was the largest number of houses composing any one cluster in the park. And though the structures of the Garden were simple, they were most artistic. The roads and paths were well built, and the landscaping was exquisite.
 \vs p073 5:3 The sanitary arrangements of the Garden were far in advance of anything that had been attempted theretofore on Urantia. The drinking water of Eden was kept wholesome by the strict observance of the sanitary regulations designed to conserve its purity. During these early times much trouble came about from neglect of these rules, but Van gradually impressed upon his associates the importance of allowing nothing to fall into the water supply of the Garden.
 \vs p073 5:4 Before the later establishment of a sewage\hyp{}disposal system the Edenites practised the scrupulous burial of all waste or decomposing material. Amadon’s inspectors made their rounds each day in search for possible causes of sickness. Urantians did not again awaken to the importance of the prevention of human diseases until the later times of the XIX and XX centuries. Before the disruption of the Adamic regime a covered brick\hyp{}conduit disposal system had been constructed which ran beneath the walls and emptied into the river of Eden almost 1.6\,km beyond the outer or lesser wall of the Garden.
 \vs p073 5:5 By the time of Adam’s arrival most of the plants of that section of the world were growing in Eden. Already had many of the fruits, cereals, and nuts been greatly improved. Many modern vegetables and cereals were first cultivated here, but scores of varieties of food plants were subsequently lost to the world.
