--- a/tex/p077.tex
+++ b/tex/p077.tex
@@ -9,7 +9,7 @@
 \vs p077 1:4 After a year of observing the work of this unique group, the Planetary Prince authorized the reproduction of midwayers without restriction. This plan was carried out as long as the power to create continued, and the original corps of 50,000 was accordingly brought into being.
 \vs p077 1:5 A period of ½ year intervened between the production of each midwayer, and when 1,000 such beings had been born to each couple, no more were ever forthcoming. And there is no explanation available as to why this power was exhausted upon the appearance of the 1,000\ts{th} offspring. No amount of further experimentation ever resulted in anything but failure.
 \vs p077 1:6 \pc These creatures constituted the intelligence corps of the Prince’s administration. They ranged far and wide, studying and observing the world races and rendering other invaluable services to the Prince and his staff in the work of influencing human society remote from the planetary headquarters.
-\vs p077 1:7 This regime continued until the tragic days of the planetary rebellion, which ensnared a little over \bibfrac{4}{5} of the primary midwayers. The loyal corps entered the service of the Melchizedek receivers, functioning under the titular leadership of Van until the days of Adam.
+\vs p077 1:7 This regime continued until the tragic days of the planetary rebellion, which ensnared a little over \bibfrac{4}{5}\ts{ths} of the primary midwayers. The loyal corps entered the service of the Melchizedek receivers, functioning under the titular leadership of Van until the days of Adam.
 \usection{2.\bibnobreakspace The Nodite Race}
 \vs p077 2:1 While this is the narrative of the origin, nature, and function of the midway creatures of Urantia, the kinship between the two orders --- primary and secondary --- makes it necessary to interrupt the story of the primary midwayers at this point in order to follow out the line of descent from the rebel members of the corporeal staff of Prince Caligastia from the days of the planetary rebellion to the times of Adam. It was this line of inheritance which, in the early days of the second garden, furnished one half of the ancestry for the secondary order of midway creatures.
 \vs p077 2:2 \pc The physical members of the Prince’s staff had been constituted sex creatures for the purpose of participating in the plan of procreating offspring embodying the combined qualities of their special order united with those of the selected stock of the Andon tribes, and all of this was in anticipation of the subsequent appearance of Adam. The Life Carriers had planned a new type of mortal embracing the union of the conjoint offspring of the Prince’s staff with the first\hyp{}generation offspring of Adam and Eve. They had thus projected a plan envisioning a new order of planetary creatures whom they hoped would become the teacher\hyp{}rulers of human society. Such beings were designed for social sovereignty, not civil sovereignty. But since this project almost completely miscarried, we shall never know what an aristocracy of benign leadership and matchless culture Urantia was thus deprived of. For when the corporeal staff later reproduced, it was subsequent to the rebellion and after they had been deprived of their connection with the life currents of the system.
