--- a/tex/p124.tex
+++ b/tex/p124.tex
@@ -24,7 +24,7 @@
 \vs p124 2:6 This year he began to show a marked preference for the company of older persons. He delighted in talking over things cultural, educational, social, economic, political, and religious with older minds, and his depth of reasoning and keenness of observation so charmed his adult associates that they were always more than willing to visit with him. Until he became responsible for the support of the home, his parents were constantly seeking to influence him to associate with those of his own age, or more nearly his age, rather than with older and better\hyp{}informed individuals for whom he evinced such a preference.
 \vs p124 2:7 Late this year he had a fishing experience of two months with his uncle on the Sea of Galilee, and he was very successful. Before attaining manhood, he had become an expert fisherman.
 \vs p124 2:8 His physical development continued; he was an advanced and privileged pupil at school; he got along fairly well at home with his younger brothers and sisters, having the advantage of being 3½ years older than the oldest of the other children. He was well thought of in Nazareth except by the parents of some of the duller children, who often spoke of Jesus as being too pert, as lacking in proper humility and youthful reserve. He manifested a growing tendency to direct the play activities of his youthful associates into more serious and thoughtful channels. He was a born teacher and simply could not refrain from so functioning, even when supposedly engaged in play.
-\vs p124 2:9 Joseph early began to instruct Jesus in the diverse means of gaining a livelihood, explaining the advantages of agriculture over industry and trade. Galilee was a more beautiful and prosperous district than Judea, and it cost only about \bibfrac{1}{4} as much to live there as in Jerusalem and Judea. It was a province of agricultural villages and thriving industrial cities, containing more than 200 towns of over 5,000 population and 30 of over 15,000.
+\vs p124 2:9 Joseph early began to instruct Jesus in the diverse means of gaining a livelihood, explaining the advantages of agriculture over industry and trade. Galilee was a more beautiful and prosperous district than Judea, and it cost only about \bibfrac{1}{4}\ts{th} as much to live there as in Jerusalem and Judea. It was a province of agricultural villages and thriving industrial cities, containing more than 200 towns of over 5,000 population and 30 of over 15,000.
 \vs p124 2:10 When on his first trip with his father to observe the fishing industry on the lake of Galilee, Jesus had just about made up his mind to become a fisherman; but close association with his father’s vocation later on influenced him to become a carpenter, while still later a combination of influences led him to the final choice of becoming a religious teacher of a new order.
 \usection{3.\bibnobreakspace The Eleventh Year (A.D.\,5)}
 \vs p124 3:1 Throughout this year the lad continued to make trips away from home with his father, but he also frequently visited his uncle’s farm and occasionally went over to Magdala to engage in fishing with the uncle who made his headquarters near that city.
