--- a/tex/p128.tex
+++ b/tex/p128.tex
@@ -30,7 +30,7 @@
 \vs p128 2:6 The moral standards of this home city of Herod Antipas were so far below those of even the caravan city of Nazareth that after six months’ sojourn at Sepphoris Jesus was not averse to finding an excuse for returning to Nazareth. The group he worked for were to become engaged on public work in both Sepphoris and the new city of Tiberias, and Jesus was disinclined to have anything to do with any sort of employment under the supervision of Herod Antipas. And there were still other reasons which made it wise, in the opinion of Jesus, for him to go back to Nazareth. When he returned to the repair shop, he did not again assume the personal direction of family affairs. He worked in association with James at the shop and as far as possible permitted him to continue oversight of the home. James’s management of family expenditures and his administration of the home budget were undisturbed.
 \vs p128 2:7 It was by just such wise and thoughtful planning that Jesus prepared the way for his eventual withdrawal from active participation in the affairs of his family. When James had had two years’ experience as acting head of the family --- and two full years before he (James) was to be married --- Joseph was placed in charge of the household funds and entrusted with the general management of the home.
 \usection{3.\bibnobreakspace The Twenty\hyp{}Third Year (A.D.\,17)}
-\vs p128 3:1 This year the financial pressure was slightly relaxed as four were at work. Miriam earned considerable by the sale of milk and butter; Martha had become an expert weaver. The purchase price of the repair shop was over \bibfrac{1}{3} paid. The situation was such that Jesus stopped work for three weeks to take Simon to Jerusalem for the Passover, and this was the longest period away from daily toil he had enjoyed since the death of his father.
+\vs p128 3:1 This year the financial pressure was slightly relaxed as four were at work. Miriam earned considerable by the sale of milk and butter; Martha had become an expert weaver. The purchase price of the repair shop was over \bibfrac{1}{3}\ts{rd} paid. The situation was such that Jesus stopped work for three weeks to take Simon to Jerusalem for the Passover, and this was the longest period away from daily toil he had enjoyed since the death of his father.
 \vs p128 3:2 They journeyed to Jerusalem by way of the Decapolis and through Pella, Gerasa, Philadelphia, Heshbon, and Jericho. They returned to Nazareth by the coast route, touching Lydda, Joppa, Caesarea, thence around Mount Carmel to Ptolemais and Nazareth. This trip fairly well acquainted Jesus with the whole of Palestine north of the Jerusalem district.
 \vs p128 3:3 At Philadelphia Jesus and Simon became acquainted with a merchant from Damascus who developed such a great liking for the Nazareth couple that he insisted they stop with him at his Jerusalem headquarters. While Simon gave attendance at the temple, Jesus spent much of his time talking with this well\hyp{}educated and much\hyp{}travelled man of world affairs. This merchant owned over 4,000 caravan camels; he had interests all over the Roman world and was now on his way to Rome. He proposed that Jesus come to Damascus to enter his Oriental import business, but Jesus explained that he did not feel justified in going so far away from his family just then. But on the way back home he thought much about these distant cities and the even more remote countries of the Far West and the Far East, countries he had so frequently heard spoken of by the caravan passengers and conductors.
 \vs p128 3:4 Simon greatly enjoyed his visit to Jerusalem. He was duly received into the commonwealth of Israel at the Passover consecration of the new sons of the commandment. While Simon attended the Passover ceremonies, Jesus mingled with the throngs of visitors and engaged in many interesting personal conferences with numerous gentile proselytes.
