--- a/tex/p135.tex
+++ b/tex/p135.tex
@@ -68,7 +68,7 @@
 \vs p135 9:8 Jesus bade them return to their food while he sat down to eat with John, his brothers James and Jude having returned to Capernaum.
 \vs p135 9:9 \pc Early in the morning of the next day he took leave of John and his disciples, going back to Galilee. He gave them no word as to when they would again see him. To John’s inquiries about his own preaching and mission Jesus only said, \textcolour{ubdarkred}{“My Father will guide you now and in the future as he has in the past.”} And these two great men separated that morning on the banks of the Jordan, never again to greet each other in the flesh.
 \usection{10.\bibnobreakspace John Journeys South}
-\vs p135 10:1 Since Jesus had gone north into Galilee, John felt led to retrace his steps southward. Accordingly, on Sunday morning, March 3, John and the remainder of his disciples began their journey south. About \bibfrac{1}{4} of John’s immediate followers had meantime departed for Galilee in quest of Jesus. There was a sadness of confusion about John. He never again preached as he had before baptizing Jesus. He somehow felt that the responsibility of the coming kingdom was no longer on his shoulders. He felt that his work was almost finished; he was disconsolate and lonely. But he preached, baptized, and journeyed on southward.
+\vs p135 10:1 Since Jesus had gone north into Galilee, John felt led to retrace his steps southward. Accordingly, on Sunday morning, March 3, John and the remainder of his disciples began their journey south. About \bibfrac{1}{4}\ts{er} of John’s immediate followers had meantime departed for Galilee in quest of Jesus. There was a sadness of confusion about John. He never again preached as he had before baptizing Jesus. He somehow felt that the responsibility of the coming kingdom was no longer on his shoulders. He felt that his work was almost finished; he was disconsolate and lonely. But he preached, baptized, and journeyed on southward.
 \vs p135 10:2 Near the village of Adam, John tarried for several weeks, and it was here that he made the memorable attack upon Herod Antipas for unlawfully taking the wife of another man. By June of this year (A.D.\,26) John was back at the Bethany ford of the Jordan, where he had begun his preaching of the coming kingdom more than a year previously. In the weeks following the baptism of Jesus the character of John’s preaching gradually changed into a proclamation of mercy for the common people, while he denounced with renewed vehemence the corrupt political and religious rulers.
 \vs p135 10:3 Herod Antipas, in whose territory John had been preaching, became alarmed lest he and his disciples should start a rebellion. Herod also resented John’s public criticisms of his domestic affairs. In view of all this, Herod decided to put John in prison. Accordingly, very early in the morning of June 12, before the multitude arrived to hear the preaching and witness the baptizing, the agents of Herod placed John under arrest. As weeks passed and he was not released, his disciples scattered over all Palestine, many of them going into Galilee to join the followers of Jesus.
 \usection{11.\bibnobreakspace John in Prison}
