--- a/tex/p153.tex
+++ b/tex/p153.tex
@@ -42,7 +42,7 @@
 \vs p153 4:6 And when he had finished speaking, his apostles surrounded him and led him from the synagogue. In silence they journeyed home with him to Bethsaida. They were all amazed and somewhat terror\hyp{}stricken by the sudden change in the Master’s teaching tactics. They were wholly unaccustomed to seeing him perform in such a militant manner.
 \usection{5.\bibnobreakspace The Saturday Evening}
 \vs p153 5:1 Time and again had Jesus dashed to pieces the hopes of his apostles, repeatedly had he crushed their fondest expectations, but no time of disappointment or season of sorrow had ever equalled that which now overtook them. And, too, there was now admixed with their depression a real fear for their safety. They were all surprisingly startled by the suddenness and completeness of the desertion of the populace. They were also somewhat frightened and disconcerted by the unexpected boldness and assertive determination exhibited by the Pharisees who had come down from Jerusalem. But most of all they were bewildered by Jesus’ sudden change of tactics. Under ordinary circumstances they would have welcomed the appearance of this more militant attitude, but coming as it did, along with so much that was unexpected, it startled them.
-\vs p153 5:2 And now, on top of all of these worries, when they reached home, Jesus refused to eat. For hours he isolated himself in one of the upper rooms. It was almost midnight when Joab, the leader of the evangelists, returned and reported that about \bibfrac{1}{3} of his associates had deserted the cause. All through the evening loyal disciples had come and gone, reporting that the revulsion of feeling toward the Master was general in Capernaum. The leaders from Jerusalem were not slow to feed this feeling of disaffection and in every way possible to seek to promote the movement away from Jesus and his teachings. During these trying hours the 12 women were in session over at Peter’s house. They were tremendously upset, but none of them deserted.
+\vs p153 5:2 And now, on top of all of these worries, when they reached home, Jesus refused to eat. For hours he isolated himself in one of the upper rooms. It was almost midnight when Joab, the leader of the evangelists, returned and reported that about \bibfrac{1}{3}\ts{rd} of his associates had deserted the cause. All through the evening loyal disciples had come and gone, reporting that the revulsion of feeling toward the Master was general in Capernaum. The leaders from Jerusalem were not slow to feed this feeling of disaffection and in every way possible to seek to promote the movement away from Jesus and his teachings. During these trying hours the 12 women were in session over at Peter’s house. They were tremendously upset, but none of them deserted.
 \vs p153 5:3 It was a little after midnight when Jesus came down from the upper chamber and stood among the 12 and their associates, numbering about 30 in all. He said: \textcolour{ubdarkred}{“I recognize that this sifting of the kingdom distresses you, but it is unavoidable. Still, after all the training you have had, was there any good reason why you should stumble at my words? Why is it that you are filled with fear and consternation when you see the kingdom being divested of these lukewarm multitudes and these half\hyp{}hearted disciples? Why do you grieve when the new day is dawning for the shining forth in new glory of the spiritual teachings of the kingdom of heaven? If you find it difficult to endure this test, what, then, will you do when the Son of Man must return to the Father? When and how will you prepare yourselves for the time when I ascend to the place whence I came to this world?}
 \vs p153 5:4 \textcolour{ubdarkred}{“My beloved, you must remember that it is the spirit that quickens; the flesh and all that pertains thereto is of little profit. The words which I have spoken to you are spirit and life. Be of good cheer! I have not deserted you. Many shall be offended by the plain speaking of these days. Already you have heard that many of my disciples have turned back; they walk no more with me. From the beginning I knew that these half\hyp{}hearted believers would fall out by the way. Did I not choose you 12 men and set you apart as ambassadors of the kingdom? And now at such a time as this would you also desert? Let each of you look to his own faith, for one of you stands in grave danger.”} And when Jesus had finished speaking, Simon Peter said: “Yes, Lord, we are sad and perplexed, but we will never forsake you. You have taught us the words of eternal life. We have believed in you and followed with you all this time. We will not turn back, for we know that you are sent by God.” And as Peter ceased speaking, they all with one accord nodded their approval of his pledge of loyalty.
 \vs p153 5:5 Then said Jesus: \textcolour{ubdarkred}{“Go to your rest, for busy times are upon us; active days are just ahead.”}
