--- a/tex/p193.tex
+++ b/tex/p193.tex
@@ -34,7 +34,7 @@
 \vs p193 4:13 While this self\hyp{}centred and ultraindividualistic apostle had many psychic, emotional, and spiritual troubles, his main difficulties were: In personality, he was isolated. In mind, he was suspicious and vengeful. In temperament, he was surly and vindictive. Emotionally, he was loveless and unforgiving. Socially, he was unconfiding and almost wholly self\hyp{}contained. In spirit, he became arrogant and selfishly ambitious. In life, he ignored those who loved him, and in death, he was friendless.
 \vs p193 4:14 These, then, are the factors of mind and influences of evil which, taken altogether, explain why a well\hyp{}meaning and otherwise onetime sincere believer in Jesus, even after several years of intimate association with his transforming personality, forsook his fellows, repudiated a sacred cause, renounced his holy calling, and betrayed his divine Master.
 \usection{5.\bibnobreakspace The Master’s Ascension}
-\vs p193 5:1 It was almost 7:30 this Thursday morning, May 18, when Jesus arrived on the western slope of Mount Olivet with his 11 silent and somewhat bewildered apostles. From this location, about \bibfrac{2}{3} the way up the mountain, they could look out over Jerusalem and down upon Gethsemane. Jesus now prepared to say his last farewell to the apostles before he took leave of Urantia. As he stood there before them, without being directed they knelt about him in a circle, and the Master said:
+\vs p193 5:1 It was almost 7:30 this Thursday morning, May 18, when Jesus arrived on the western slope of Mount Olivet with his 11 silent and somewhat bewildered apostles. From this location, about \bibfrac{2}{3}\ts{rds} the way up the mountain, they could look out over Jerusalem and down upon Gethsemane. Jesus now prepared to say his last farewell to the apostles before he took leave of Urantia. As he stood there before them, without being directed they knelt about him in a circle, and the Master said:
 \vs p193 5:2 \pc \textcolour{ubdarkred}{“I bade you tarry in Jerusalem until you were endowed with power from on high. I am now about to take leave of you; I am about to ascend to my Father, and soon, very soon, will we send into this world of my sojourn the Spirit of Truth; and when he has come, you shall begin the new proclamation of the gospel of the kingdom, first in Jerusalem and then to the uttermost parts of the world. Love men with the love wherewith I have loved you and serve your fellow mortals even as I have served you. By the spirit fruits of your lives impel souls to believe the truth that man is a son of God, and that all men are brethren. Remember all I have taught you and the life I have lived among you. My love overshadows you, my spirit will dwell with you, and my peace shall abide upon you. Farewell.”}
 \vs p193 5:3 \pc When the morontia Master had thus spoken, he vanished from their sight. This so\hyp{}called ascension of Jesus was in no way different from his other disappearances from mortal vision during the 40 days of his morontia career on Urantia.
 \vs p193 5:4 The Master went to Edentia by way of Jerusem, where the Most Highs, under the observation of the Paradise Son, released Jesus of Nazareth from the morontia state and, through the spirit channels of ascension, returned him to the status of Paradise sonship and supreme sovereignty on Salvington.
