--- a/tex/p022.tex
+++ b/tex/p022.tex
@@ -49,7 +49,7 @@
 \vs p022 5:2 Trinitized Custodians are ascendant seraphim and translated midway creatures who have passed through Havona and have attained Paradise and the Corps of the Finality. Subsequently they were embraced by the Paradise Trinity and were assigned to the service of the Ancients of Days.
 \vs p022 5:3 The candidates for the Trinity embrace from among the ascendant seraphim are accorded this recognition because of their valiant co\hyp{}operation with some ascendant mortal who attained the Corps of the Finality and was subsequently trinitized. My own seraphic guardian of the mortal career went through with me, was later trinitized, and now is attached to the Uversa government as a Trinitized Custodian.
 \vs p022 5:4 And so with the midway creatures; many are translated and achieve Paradise and, along with the seraphim and for the same reasons, are Trinity embraced and commissioned as Custodians in the superuniverses.
-\vs p022 5:5 The Trinitized Custodians are embraced by the Paradise Trinity in groups of 70,000, and \bibfrac{1}{7} of each group is assigned to a superuniverse. There are now in the service of Orvonton slightly over 10,000,000 of these trusted and high Custodians. They serve on Uversa and on the major and minor headquarters spheres. In their labours they are assisted by a corps of several billion seconaphim and other able superuniverse personalities.
+\vs p022 5:5 The Trinitized Custodians are embraced by the Paradise Trinity in groups of 70,000, and \bibfrac{1}{7}\ts{th} of each group is assigned to a superuniverse. There are now in the service of Orvonton slightly over 10,000,000 of these trusted and high Custodians. They serve on Uversa and on the major and minor headquarters spheres. In their labours they are assisted by a corps of several billion seconaphim and other able superuniverse personalities.
 \vs p022 5:6 The Trinitized Custodians start out their careers as custodians, and they continue as such in the affairs of the supergovernments. In a way, they are officers of their superuniverse governments, but they do not deal with individuals, as do the Celestial Guardians. The Trinitized Custodians administer group affairs and foster collective projects. They are the custodians of records, plans, and institutions; they act as the trustees of undertakings, personality groups, ascendant projects, morontia plans, universe projections, and innumerable other enterprises.
 \usection{6.\bibnobreakspace The Trinitized Ambassadors}
 \vs p022 6:1 Trinitized Ambassadors are the second order of the Trinitized Sons of Selection and like their associates, the Custodians, are recruited from two types of ascendant creatures. Not all ascending mortals are Adjuster or Father fused; some are Spirit fused, some are Son fused. Certain of these Spirit\hyp{} and Son\hyp{}fused mortals reach Havona and attain Paradise. From among these Paradise ascenders, candidates are selected for the Trinity embrace, and from time to time they are trinitized in classes of 7,000. They are then commissioned in the superuniverses as Trinitized Ambassadors of the Ancients of Days. Almost 500,000,000 are registered on Uversa.
@@ -91,7 +91,7 @@
 \vs p022 10:2 \pc If, in discussing the Celestial Guardians, I have seemed to call attention to the limitations and handicaps of these twice\hyp{}trinitized sons, let me now, in all fairness, call attention to their one point of great strength, the attribute which makes them almost invaluable to us. These beings owe their very existence to the fact that they are the personification of a single and supreme concept. They are the personality embodiment of some divine idea, some universal ideal, as it has never before been conceived, expressed, or trinitized. And they have subsequently been Trinity embraced; thus they show forth and actually embody the very wisdom of the divine Trinity as concerns the idea\hyp{}ideal of their personality existence. As far as that particular concept is revealable to the universes, these personalities embody all of everything that any creature or Creator intelligence could possibly conceive, express, or exemplify. \bibemph{They are that idea personified.}
 \vs p022 10:3 Can you not see that such living concentrations of a single supreme concept of universe reality would be of untold service to those who are entrusted with the administration of the superuniverses?
 \vs p022 10:4 \pc Not long since I was directed to head a commission of six --- one of each of the high sons --- assigned to the study of three problems pertaining to a group of new universes in the south parts of Orvonton. I was made acutely aware of the value of the High Son Assistants when I made requisition on the chief of their order on Uversa for temporary assignment of such secretaries to my commission. The first of our ideas was represented by a High Son Assistant on Uversa, who was forthwith attached to our group. Our second problem was embodied in a High Son Assistant assigned to superuniverse number three. We secured much help from this source through the central universe clearinghouse for the co\hyp{}ordination and dissemination of essential knowledge, but nothing comparable to the assistance afforded by the actual presence of a personality who \bibemph{is} a concept creature\hyp{}trinitized in supremacy and Deity\hyp{}trinitized in finality. Concerning our third problem, the records of Paradise disclosed that such an idea had never been creature trinitized.
-\vs p022 10:5 \pc High Son Assistants are unique and original personalizations of tremendous concepts and stupendous ideals. And as such they are able to impart inexpressible illumination to our deliberations from time to time. When I am acting on some remote assignment out in the universes of space, think what it means, by way of assistance, if I am so fortunate as to have attached to my mission a High Son Assistant who is the fullness of divine concept regarding the very problem I have been sent to attack and solve; and I have repeatedly had this very experience. The only difficulty with this plan is that no superuniverse can have a complete edition of these trinitized ideas; we only get \bibfrac{1}{7} of these beings; so it is only about one time in seven that we enjoy the personal association of these beings even when the records indicate that the idea has been trinitized.
+\vs p022 10:5 \pc High Son Assistants are unique and original personalizations of tremendous concepts and stupendous ideals. And as such they are able to impart inexpressible illumination to our deliberations from time to time. When I am acting on some remote assignment out in the universes of space, think what it means, by way of assistance, if I am so fortunate as to have attached to my mission a High Son Assistant who is the fullness of divine concept regarding the very problem I have been sent to attack and solve; and I have repeatedly had this very experience. The only difficulty with this plan is that no superuniverse can have a complete edition of these trinitized ideas; we only get \bibfrac{1}{7}\ts{th} of these beings; so it is only about one time in seven that we enjoy the personal association of these beings even when the records indicate that the idea has been trinitized.
 \vs p022 10:6 We could use to great advantage much larger numbers of these beings on Uversa. Because of their value to the superuniverse administrations, we, in every way possible, encourage the pilgrims of space and also the residents of Paradise to attempt trinitization after they have contributed to one another those experiential realities which are essential to the enactment of such creative adventures.
 \vs p022 10:7 \pc We now have in our superuniverse about $1.25 \times 10^6$ High Son Assistants, and they serve on both the major and minor sectors, even as they function on Uversa. They very often accompany us on our assignments to the remote universes. High Son Assistants are not permanently assigned to any Son or to any commission. They are in constant circulation, serving where the idea or ideal which they \bibemph{are} can best further the eternal purposes of the Paradise Trinity, whose sons they have become.
 \vs p022 10:8 They are touchingly affectionate, superbly loyal, exquisitely intelligent, supremely wise --- regarding a single idea --- and transcendently humble. While they can impart to you the lore of the universe concerning their one idea or ideal, it is well\hyp{}nigh pathetic to observe them seeking knowledge and information on hosts of other subjects, even from the ascending mortals.
