--- a/tex/p111.tex
+++ b/tex/p111.tex
@@ -40,7 +40,7 @@
 \vs p111 4:1 Recognition is the intellectual process of fitting the sensory impressions received from the external world into the memory patterns of the individual. Understanding connotes that these recognized sensory impressions and their associated memory patterns have become integrated or organized into a dynamic network of principles.
 \vs p111 4:2 Meanings are derived from a combination of recognition and understanding. Meanings are nonexistent in a wholly sensory or material world. Meanings and values are only perceived in the inner or supermaterial spheres of human experience.
 \vs p111 4:3 \pc The advances of true civilization are all born in this inner world of mankind. It is only the inner life that is truly creative. Civilization can hardly progress when the majority of the youth of any generation devote their interests and energies to the materialistic pursuits of the sensory or outer world.
-\vs p111 4:4 The inner and the outer worlds have a different set of values. Any civilization is in jeopardy when \bibfrac{3}{4} of its youth enter materialistic professions and devote themselves to the pursuit of the sensory activities of the outer world. Civilization is in danger when youth neglect to interest themselves in ethics, sociology, eugenics, philosophy, the fine arts, religion, and cosmology.
+\vs p111 4:4 The inner and the outer worlds have a different set of values. Any civilization is in jeopardy when \bibfrac{3}{4}\ts{ers} of its youth enter materialistic professions and devote themselves to the pursuit of the sensory activities of the outer world. Civilization is in danger when youth neglect to interest themselves in ethics, sociology, eugenics, philosophy, the fine arts, religion, and cosmology.
 \vs p111 4:5 Only in the higher levels of the superconscious mind as it impinges upon the spirit realm of human experience can you find those higher concepts in association with effective master patterns which will contribute to the building of a better and more enduring civilization. Personality is inherently creative, but it thus functions only in the inner life of the individual.
 \vs p111 4:6 \pc Snow crystals are always hexagonal in form, but no two are ever alike. Children conform to types, but no two are exactly alike, even in the case of twins. Personality follows types but is always unique.
 \vs p111 4:7 \pc Happiness and joy take origin in the inner life. You cannot experience real joy all by yourself. A solitary life is fatal to happiness. Even families and nations will enjoy life more if they share it with others.
