--- a/tex/p165.tex
+++ b/tex/p165.tex
@@ -6,7 +6,7 @@
 \vs p165 0:4 Throughout this period Jesus divided his time between the camp at Pella and trips with the 12 to assist the 70 in the various cities where they taught and preached. Under Abner’s instructions the 70 baptized all believers, although Jesus had not so charged them.
 \usection{1.\bibnobreakspace At the Pella Camp}
 \vs p165 1:1 By the middle of January more than 1200 persons were gathered together at Pella, and Jesus taught this multitude at least once each day when he was in residence at the camp, usually speaking at 9:00 if not prevented by rain. Peter and the other apostles taught each afternoon. The evenings Jesus reserved for the usual sessions of questions and answers with the 12 and other advanced disciples. The evening groups averaged about 50.
-\vs p165 1:2 By the middle of March, the time when Jesus began his journey toward Jerusalem, over 4,000 persons composed the large audience which heard Jesus or Peter preach each morning. The Master chose to terminate his work on earth when the interest in his message had reached a high point, the highest point attained under this second or nonmiraculous phase of the progress of the kingdom. While \bibfrac{3}{4} of the multitude were truth seekers, there were also present a large number of Pharisees from Jerusalem and elsewhere, together with many doubters and cavillers.
+\vs p165 1:2 By the middle of March, the time when Jesus began his journey toward Jerusalem, over 4,000 persons composed the large audience which heard Jesus or Peter preach each morning. The Master chose to terminate his work on earth when the interest in his message had reached a high point, the highest point attained under this second or nonmiraculous phase of the progress of the kingdom. While \bibfrac{3}{4}\ts{ers} of the multitude were truth seekers, there were also present a large number of Pharisees from Jerusalem and elsewhere, together with many doubters and cavillers.
 \vs p165 1:3 Jesus and the 12 apostles devoted much of their time to the multitude assembled at the Pella camp. The 12 paid little or no attention to the field work, only going out with Jesus to visit Abner’s associates from time to time. Abner was very familiar with the Perean district since this was the field in which his former master, John the Baptist, had done most of his work. After beginning the Perean mission, Abner and the 70 never returned to the Pella camp.
 \usection{2.\bibnobreakspace Sermon on the Good Shepherd}
 \vs p165 2:1 A company of over 300 Jerusalemites, Pharisees and others, followed Jesus north to Pella when he hastened away from the jurisdiction of the Jewish rulers at the ending of the feast of the dedication; and it was in the presence of these Jewish teachers and leaders, as well as in the hearing of the 12 apostles, that Jesus preached the sermon on the “Good Shepherd.” After half an hour of informal discussion, speaking to a group of about 100, Jesus said:
