--- a/tex/p043.tex
+++ b/tex/p043.tex
@@ -1,7 +1,7 @@
 \upaper{43}{The Constellations}
 \author{Malavatia Melchizedek}
 \vs p043 0:1 Urantia is commonly referred to as 606 of Satania in Norlatiadek of Nebadon, meaning the 606\ts{th} inhabited world in the local system of Satania, situated in the constellation of Norlatiadek, one of the 100 constellations of the local universe of Nebadon. Constellations being the primary divisions of a local universe, their rulers link the local systems of inhabited worlds to the central administration of the local universe on Salvington and by reflectivity to the superadministration of the Ancients of Days on Uversa.
-\vs p043 0:2 \pc The government of your constellation is situated in a cluster of 771 architectural spheres, the centremost and largest of which is Edentia, the seat of the administration of the Constellation Fathers, the Most Highs of Norlatiadek. Edentia itself is approximately 100 times as large as your world. The 70 major spheres surrounding Edentia are about 10 times the size of Urantia, while the 10 satellites which revolve around each of these 70 worlds are about the size of Urantia. These 771 architectural spheres are quite comparable in size to those of other constellations.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[angle=90,width=\columnwidth]{images/EDENTIA-700.jpg}\caption{Edentia by Gary~Tonge}\end{figure}}
+\vs p043 0:2 \pc The government of your constellation is situated in a cluster of 771 architectural spheres, the centremost and largest of which is Edentia, the seat of the administration of the Constellation Fathers, the Most Highs of Norlatiadek. Edentia itself is approximately 100 times as large as your world. The 70 major spheres surrounding Edentia are about 10 times the size of Urantia, while the 10 satellites which revolve around each of these 70 worlds are about the size of Urantia\fnst{\textbf{size of Urantia}, Note that these proportions also hold for the local system architectural spheres (see \bibref[45:0.1]{p045 0:1}). Assuming that they remain true for the spheres of the Salvington cluser, we can calculate the total surface area of all architectural worlds (cf. note at \bibref[37:10.1]{p037 10:1}): $10^4 + 70*10^2 + 70*6 + 100*(10^4 + 70*10^2 + 70*10) + 10,000*(10^4 + 7*10^2 + 7*7) = 109,277,420$. This is more than 10 times greater than the total surface of all the evolutionary worlds.}. These 771 architectural spheres are quite comparable in size to those of other constellations.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[angle=90,width=\columnwidth]{images/EDENTIA-700.jpg}\caption{Edentia by Gary~Tonge}\end{figure}}
 \vs p043 0:3 \pc Edentia time reckoning and distance measurement are those of Salvington, and like the spheres of the universe capital, the constellation headquarters worlds are fully supplied with all orders of celestial intelligences. In general, these personalities are not very different from those described in connection with the universe administration.
 \vs p043 0:4 The supervisor seraphim, the third order of local universe angels, are assigned to the service of the constellations. They make their headquarters on the capital spheres and minister extensively to the encircling morontia\hyp{}training worlds. In Norlatiadek the 70 major spheres, together with the 700 minor satellites, are inhabited by the univitatia, the permanent citizens of the constellation. All these architectural worlds are fully administered by the various groups of native life, for the greater part unrevealed but including the efficient spironga and the beautiful spornagia. Being the mid\hyp{}point in the morontia\hyp{}training regime, as you might suspect, the morontia life of the constellations is both typical and ideal.
 \usection{1.\bibnobreakspace The Constellation Headquarters}
